<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Container for main content -->
    <LinearLayout
        android:id="@+id/layoutcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Container for score display -->
        <LinearLayout
            android:id="@+id/scorelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Display question number -->
            <Button
                android:id="@+id/questionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/question_no"
                android:padding="10dp"
                android:text="@string/question_no"
                android:textColor="@color/white"
                android:textSize="24sp">

            </Button>

            <!-- Display score -->
            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/score"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <!-- Progress bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:indeterminate="false"
            android:maxHeight="20dp"
            android:minHeight="20dp"
            android:progressDrawable="@drawable/custom_progress"
            android:visibility="visible" />

        <!-- Display question and answer options -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- Text view to display the question -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5sp"
                android:layout_marginTop="20sp"
                android:background="@color/white"
                android:fontFamily="@font/acme">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5sp"
                android:layout_marginTop="150sp"
                android:background="@color/white">

            </TextView>

            <TextView
                android:id="@+id/tvQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="20sp"
                android:background="@color/question_color"
                android:padding="35sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>

        <!-- Container for answer buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Option A -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/a"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="20sp"
                    android:background="@drawable/answer_btn"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

            </RelativeLayout>

            <!-- Option B -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/b"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="20sp"
                    android:background="@drawable/answer_btn"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </RelativeLayout>

            <!-- Option C -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/c"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="20sp"
                    android:background="@drawable/answer_btn"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </RelativeLayout>

            <!-- Option D -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/d"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="20sp"
                    android:background="@drawable/answer_btn"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

            </RelativeLayout>

        </LinearLayout>
        <!-- Space for layout -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp">

        </Space>

    </LinearLayout>

</LinearLayout>

